--- a/repository/src/main/AndroidManifest.xml
+++ b/repository/src/main/AndroidManifest.xml
@@ -1,2 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tho.madridshops.repository" />
+    package="com.tho.madridshops.repository">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+</manifest>
