--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -4,8 +4,6 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 26
 
-
-
     defaultConfig {
         minSdkVersion 17
         targetSdkVersion 26
@@ -34,7 +32,7 @@ dependencies {
     // Jackson JSON Parsing
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.1"
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation "com.android.support:appcompat-v7:$appcompat_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
