--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -16,10 +16,10 @@ android {
 
     buildTypes {
         debug {
-            buildConfigField "String", "MADRID_SHOPS_CACHE_DB_NAME", "MadridShopsCache.sqlite"
+            buildConfigField "String", "MADRID_SHOPS_CACHE_DB_NAME", '"MadridShopsCache.sqlite"'
         }
         release {
-            buildConfigField "String", "MADRID_SHOPS_CACHE_DB_NAME", "MadridShopsCache.sqlite"
+            buildConfigField "String", "MADRID_SHOPS_CACHE_DB_NAME", '"MadridShopsCache.sqlite"'
 
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
