GetAllShops and DeleteAllShops implemented. Shop list is downloaded and parsed to a DB. Some tests out of order

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,12 @@ android {
         multiDexEnabled true
     }
     buildTypes {
+        debug {
+            buildConfigField "String", "MADRID_SHOPS_SERVER_URL", "\"http://dev.myserver.com\""
+        }
         release {
+            buildConfigField "String", "MADRID_SHOPS_SERVER_URL", "\"http://prod.myserver.com\""
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
