--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
 
     // Google Maps
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
+
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
