--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,11 @@ dependencies {
 
     // Picasso
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    // Coroutines
+    implementation 'org.jetbrains.anko:anko-coroutines:0.10.3'
+
+    //CardView
+    implementation "com.android.support:cardview-v7:$appcompat_version"
+
 }
