--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,18 +40,23 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".activity.ActivitiesMainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.ActivityDetailActivity" />
         <activity android:name=".activity.PicassoActivity" />
-        <activity android:name=".activity.DetailActivity">
+        <activity
+            android:name=".activity.ShopsMainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity android:name=".activity.ShopDetailActivity" />
+
     </application>
 
 </manifest>
