--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tho.madridshops">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -23,7 +24,6 @@
         android:required="true" />
 
     <application
-        android:name=".MadridShopsApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -46,7 +46,7 @@
         </activity>
         <activity android:name=".activity.ActivityDetailActivity" />
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".activity.MadridShopsApp"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
