--- a/repository/src/main/AndroidManifest.xml
+++ b/repository/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tho.madridshops.repository">
 
+    <!-- Access to internet -->
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- Check network state -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 </manifest>
